Add scss variables

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,11 +1,13 @@
 
 // Body
 $body-bg: #f8fafc;
+$body-color: #34495e;
 
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+$jura: "Jura";
+$unica-one: "Unica One";
+$font-family-sans-serif: "Jura", sans-serif;
+$line-height-base: 1.8;
 
 // Colors
 $blue: #3490dc;
@@ -18,3 +20,14 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$main: #34495e;
+$detail: #00a376;
+$soft: #dee2e6; 
+
+$theme-colors: (
+  "main": $main,
+  "detail": $detail
+);
+
+$link-color: $detail;
+
