--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,9 +26,9 @@ html {
   font-family: $unica-one;
 }
 
-.border-3 {
+.border-5 {
   border-style: solid;
-  border-width: 3px;
+  border-width: 5px;
 }
 
 .soft-shadow {
@@ -54,4 +54,9 @@ html {
 
 .post-body {
   font-size: 1.2rem;
+}
+
+.author-picture {
+  border-radius: 9999px;
+  border: 5px solid #00A376;
 }
